--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -19,35 +19,26 @@
         app:layout_constraintTop_toBottomOf="@+id/Sets" />
 
     <EditText
-        android:id="@+id/Date"
-        android:layout_width="179dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginBottom="24dp"
-        android:text="Enter Date"
-        app:layout_constraintBottom_toTopOf="@+id/Exercise"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.482"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
         android:id="@+id/Exercise"
         android:layout_width="179dp"
         android:layout_height="43dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="147dp"
+        android:layout_marginBottom="24dp"
         android:text="Enter Exercise Type"
+        app:layout_constraintBottom_toTopOf="@+id/Reps"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Date" />
+        app:layout_constraintTop_toBottomOf="@+id/Back" />
 
     <EditText
         android:id="@+id/Reps"
         android:layout_width="179dp"
         android:layout_height="43dp"
         android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
         android:text="Enter Reps"
+        app:layout_constraintBottom_toTopOf="@+id/Sets"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +49,9 @@
         android:layout_width="179dp"
         android:layout_height="43dp"
         android:layout_marginTop="24dp"
+        android:layout_marginBottom="13dp"
         android:text="Enter Sets"
+        app:layout_constraintBottom_toTopOf="@+id/recordExButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,62 +64,43 @@
         android:layout_marginStart="26dp"
         android:layout_marginTop="22dp"
         android:layout_marginEnd="291dp"
-        android:layout_marginBottom="80dp"
         android:text="Back"
-        app:layout_constraintBottom_toTopOf="@+id/Date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textViewDate"
-        android:layout_width="70dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginEnd="13dp"
-        android:text="Date:"
-        android:textAlignment="textEnd"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/Date"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Back"
-        app:layout_constraintVertical_bias="0.145" />
 
     <TextView
         android:id="@+id/textViewType"
         android:layout_width="70dp"
         android:layout_height="43dp"
         android:layout_marginStart="29dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="139dp"
         android:layout_marginEnd="13dp"
-        android:layout_marginBottom="464dp"
+        android:layout_marginBottom="32dp"
         android:text="Type:"
         android:textAlignment="textEnd"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/Date"
+        app:layout_constraintBottom_toTopOf="@+id/textViewReps"
+        app:layout_constraintEnd_toStartOf="@+id/Exercise"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />
+        app:layout_constraintTop_toBottomOf="@+id/Back" />
 
     <TextView
         android:id="@+id/textViewReps"
         android:layout_width="70dp"
         android:layout_height="43dp"
         android:layout_marginStart="29dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="13dp"
-        android:layout_marginBottom="396dp"
+        android:layout_marginBottom="28dp"
         android:text="Reps:"
         android:textAlignment="textEnd"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/Date"
+        app:layout_constraintBottom_toTopOf="@+id/textViewSets"
+        app:layout_constraintEnd_toStartOf="@+id/Reps"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewType" />
@@ -136,15 +110,15 @@
         android:layout_width="70dp"
         android:layout_height="43dp"
         android:layout_marginStart="29dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="13dp"
-        android:layout_marginBottom="329dp"
+        android:layout_marginBottom="270dp"
         android:text="Sets:"
         android:textAlignment="textEnd"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/Date"
+        app:layout_constraintEnd_toStartOf="@+id/Sets"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewReps" />
