Updated Food Log and Exercise Log UI

--- a/app/src/main/res/layout/activity_food_log.xml
+++ b/app/src/main/res/layout/activity_food_log.xml
@@ -7,17 +7,18 @@
 
     <EditText
         android:id="@+id/FoodET"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="184dp"
+        android:layout_height="48dp"
         android:ems="10"
+        android:gravity="center"
+        android:hint="i.e. egg"
         android:inputType="textPersonName"
-        android:hint="egg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.73"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toEndOf="@+id/FoodNameTV"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.205" />
+        app:layout_constraintVertical_bias="0.207" />
 
     <Button
         android:id="@+id/FoodBackButton"
@@ -35,8 +36,10 @@
         android:id="@+id/FoodNameTV"
         android:layout_width="112dp"
         android:layout_height="49dp"
-        android:text="Food: "
-        android:textSize="30dp"
+        android:text="Food:"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.123"
@@ -48,21 +51,25 @@
         android:id="@+id/CalorieTV"
         android:layout_width="132dp"
         android:layout_height="46dp"
-        android:text="Calories: "
-        android:textSize="30dp"
+        android:gravity="center"
+        android:text="Calories:"
+        android:textColor="@color/black"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.132"
+        app:layout_constraintHorizontal_bias="0.111"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/FoodNameTV"
-        app:layout_constraintVertical_bias="0.07" />
+        app:layout_constraintVertical_bias="0.074" />
 
     <TextView
         android:id="@+id/CarbTV"
         android:layout_width="112dp"
         android:layout_height="49dp"
-        android:text="Carbs: "
-        android:textSize="30dp"
+        android:text="Carbs:"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.123"
@@ -75,7 +82,9 @@
         android:layout_width="126dp"
         android:layout_height="46dp"
         android:text="Proteins: "
-        android:textSize="30dp"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.129"
@@ -87,8 +96,10 @@
         android:id="@+id/FatTV"
         android:layout_width="112dp"
         android:layout_height="49dp"
-        android:text="Fats: "
-        android:textSize="30dp"
+        android:text="Fats:"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.123"
@@ -98,59 +109,63 @@
 
     <EditText
         android:id="@+id/CalorieET"
-        android:layout_width="178dp"
-        android:layout_height="44dp"
+        android:layout_width="187dp"
+        android:layout_height="46dp"
         android:ems="10"
+        android:gravity="center"
+        android:hint="i.e. 78"
         android:inputType="number"
-        android:hint="78"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.281"
+        app:layout_constraintHorizontal_bias="0.393"
         app:layout_constraintStart_toEndOf="@+id/CalorieTV"
         app:layout_constraintTop_toBottomOf="@+id/FoodET"
-        app:layout_constraintVertical_bias="0.075" />
+        app:layout_constraintVertical_bias="0.074" />
 
     <EditText
         android:id="@+id/CarbET"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="187dp"
+        android:layout_height="44dp"
         android:ems="10"
+        android:hint="i.e. 0.6"
+        android:gravity="center"
         android:inputType="numberDecimal"
-        android:hint=".6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.692"
+        app:layout_constraintHorizontal_bias="0.523"
         app:layout_constraintStart_toEndOf="@+id/CarbTV"
         app:layout_constraintTop_toBottomOf="@+id/CalorieET"
-        app:layout_constraintVertical_bias="0.088" />
+        app:layout_constraintVertical_bias="0.093" />
 
     <EditText
         android:id="@+id/ProteinET"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="185dp"
+        android:layout_height="46dp"
         android:ems="10"
+        android:gravity="center"
+        android:hint="i.e. 6"
         android:inputType="numberDecimal"
-        android:hint="6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.631"
+        app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toEndOf="@+id/ProteinTV"
         app:layout_constraintTop_toBottomOf="@+id/CarbET"
-        app:layout_constraintVertical_bias="0.109" />
+        app:layout_constraintVertical_bias="0.093" />
 
     <EditText
         android:id="@+id/FatET"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="192dp"
+        android:layout_height="48dp"
         android:ems="10"
+        android:hint="i.e. 5"
+        android:gravity="center"
         android:inputType="numberDecimal"
-        android:hint="5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.73"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toEndOf="@+id/FatTV"
         app:layout_constraintTop_toBottomOf="@+id/ProteinET"
-        app:layout_constraintVertical_bias="0.105" />
+        app:layout_constraintVertical_bias="0.107" />
 
     <Button
         android:id="@+id/FoodRecordButton"
