Added ability to see past food logs

--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -24,7 +24,8 @@
         android:layout_height="43dp"
         android:layout_marginTop="147dp"
         android:layout_marginBottom="24dp"
-        android:text="Enter Exercise Type"
+        android:hint="Enter Exercise Type"
+        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/Reps"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
@@ -37,7 +38,8 @@
         android:layout_height="43dp"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="24dp"
-        android:text="Enter Reps"
+        android:hint="Enter Reps"
+        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/Sets"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
@@ -50,7 +52,8 @@
         android:layout_height="43dp"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="13dp"
-        android:text="Enter Sets"
+        android:hint="Enter Sets"
+        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/recordExButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
